services/keycloak/envs/developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: "keycloak"
  labels:
    app.kubernetes.io/name: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  type: NodePort
