services/keycloak/envs/developer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: opsbots
  labels:
    app.kubernetes.io/name: keycloak
    helm.sh/chart: keycloak-9.7.3
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: keycloak
  name: keycloak
  namespace: "keycloak"
spec:
  rules:
    - host: "keycloak.lo"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
  tls:
    - hosts:
        - "keycloak.lo"
      secretName: keycloak.lo-tls
